kubernetes/deployment.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: api
#   labels:
#     app: api
# spec:
#   replicas: 3
#   selector:
#     matchLabels:
#       app: api
#   template:
#     metadata:
#       labels:
#         app: api
#     spec:
#       containers:
#       - name: api
#         image: "containerregistrydevchejuro.azurecr.io/api:1011"
#         ports:
#         - containerPort: 5000
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 211125318888.dkr.ecr.us-east-1.amazonaws.com/nodejs:latest
          ports:
            - containerPort: 3000
