kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    # kubernetes.io/ingress.class: azure/application-gateway
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: 'ip'
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
  - http:
      paths:
      - path: /customers
        backend:
          service:
            name: customer-service
            port:
              number: 3000
        pathType: Exact
      - path: /
        backend:
          service:
            name: frontend
            port:
              number: 3000
        pathType: Exact
